fix: Sonar issues [DHIS2-18005]